# datus-storage-adapters

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pr-title-checker.yml
datus-storage-base/: README.md  pyproject.toml
datus-storage-base/datus_storage_base/: __init__.py  backend_config.py  conditions.py
datus-storage-base/datus_storage_base/rdb/: registry.py
datus-storage-base/datus_storage_base/vector/: base.py  registry.py
datus-storage-postgresql/: README.md  pyproject.toml
datus-storage-postgresql/datus_storage_postgresql/: __init__.py
datus-storage-postgresql/datus_storage_postgresql/rdb/: __init__.py  backend.py  testing.py
datus-storage-postgresql/datus_storage_postgresql/vector/: __init__.py  backend.py  schema_converter.py  testing.py
datus-storage-postgresql/src/rdb/: __init__.py  backend.py  testing.py
datus-storage-postgresql/src/vector/: __init__.py  backend.py  schema_converter.py  testing.py
datus-storage-postgresql/tests/: conftest.py  test_pg_rdb_backend.py  test_pgvector_backend.py
docs/superpowers/plans/: 2026-03-27-isolation-type.md
docs/superpowers/specs/: 2026-03-27-isolation-type-design.md
