[project]
name = "datus-storage-adapter"
version = "0.1.0"
description = "Monorepo workspace for Datus storage adapter packages"
requires-python = ">=3.12"
dependencies = [
    "datus-storage-base",
    "datus-storage-postgresql",
]

[tool.uv.sources]
datus-storage-base = { workspace = true }
datus-storage-postgresql = { workspace = true }

[tool.uv.workspace]
members = [
    "datus-storage-base",
    "datus-storage-postgresql",
]
