[project]
name = "datus-storage-adapter"
version = "0.1.2"
description = "Monorepo workspace for Datus storage adapter packages"
requires-python = ">=3.12"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "Datus Team", email = "felix.liu@datus.ai" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "datus-storage-base",
    "datus-storage-postgresql",
]

[project.urls]
Homepage = "https://github.com/Datus-ai/datus-storage-adapters"
Repository = "https://github.com/Datus-ai/datus-storage-adapters"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
datus-storage-base = { workspace = true }
datus-storage-postgresql = { workspace = true }

[tool.uv.workspace]
members = [
    "datus-storage-base",
    "datus-storage-postgresql",
]

# Ruff
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
# Compatible with black defaults

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "B", # flake8-bugbear
    "I", # isort
    "C90", # mccabe complexity
    "T20", # flake8-print (enforce "no print()" guardrail)
]
ignore = [
    "E203", # whitespace before ':'
    "E266", # too many leading '#' for block comment
    "E501", # line too long (handled by formatter)
    # TODO: enable these rules incrementally in follow-up PRs
    "C901", # function too complex (218 existing violations)
    "B904", # raise without from inside except (22 existing violations)
    "B905", # zip without explicit strict (21 existing violations)
    "B027", # empty method without abstract decorator
    "B007", # unused loop control variable
    "B019", # cached instance method
    "B024", # abstract base class without abstract method
    "T201", # print found (63 existing violations, clean up incrementally)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["datus_storage_base", "datus_storage_postgresql"]